<resources>
    <string name="app_name">Умный Обогрев</string>
    <string name="text_user_not_logged">Вы не вошли\nв пользователя</string>
    <string name="button_sign_in">Вход</string>
    <string name="button_sign_up">Регистрация</string>
    <string name="input_layout_user_email">Почта пользователя</string>
    <string name="input_layout_user_password">Пароль пользователя</string>
    <string name="input_layout_confirm_password">Подтвердите пароль</string>
    <string name="image_view_user_profile">Изображение профиля пользователя</string>
    <string name="button_login">Войти</string>
    <string name="button_reset_password">Забыли пароль?</string>
    <string name="button_home">Главная</string>
    <string name="button_work_parameters">Параметры Работы</string>
    <string name="button_settings">Настройки</string>
    <string name="button_edit_email">Изменить почту</string>
    <string name="button_edit_password">Изменить пароль</string>
    <string name="button_logout">Выйти</string>
    <string name="button_delete_user">Удалить</string>
    <string name="button_user_profile">Профиль</string>
    <string name="button_back">Назад</string>
    <string name="button_create_user">Создать пользователя</string>
    <string name="text_update_email">Обновить почту</string>
    <string name="text_update_password">Обновить пароль</string>
    <string name="button_update_user">Обновить пользователя</string>
    <string name="input_layout_wifi_network">Название WiFi сети</string>
    <string name="input_layout_wifi_password">Пароль WiFi сети</string>
    <string name="input_layout_timezone">Часовой пояс</string>
    <string name="input_layout_temperature_interval">Интервал датчика</string>
    <string name="button_send_work_parameters">Отправить параметры</string>
    <string name="text_work_parameters">Настройка ESP8266</string>
    <string name="tab_item_temperature_mode">По температуре</string>
    <string name="tab_item_time_mode">По времени</string>
    <string name="view_pager">Главный экран</string>
    <string name="input_layout_temperature">Температура обогрева</string>
    <string name="button_start_mode">Запустить режим</string>
    <string name="button_stop_mode">Остановить режим</string>
    <string name="text_temperature" translatable="false">%1d°C</string>
    <string name="card_view_temperature_range">Мин температура: %1d°C\nМакс температура: %2d°C</string>
    <string name="button_add_time">Добавить</string>
    <string name="button_start_heater">Запустить обогрев</string>
    <string name="button_stop_heater">Остановить обогрев</string>
    <string name="other_settings_title">Остальные настройки</string>
    <string name="temperature_mode_title">Режим по температуре</string>
    <string name="notifications_title">Уведомления</string>
    <string name="show_notification_with_temperature_title">Показать уведомление</string>
    <string name="show_notification_with_temperature_summary">Постоянное уведомление с температурой</string>
    <string name="enable_heater_state_notifications_title">Другие уведомления</string>
    <string name="enable_heater_state_notifications_summary">Уведомления о включении/выключении обогревателя</string>
    <string name="reducing_the_min_temperature_title">Минимальная температура</string>
    <string name="reducing_the_min_temperature_summary">Понижение минимальной температуры относительно установленной</string>
    <string name="increasing_the_max_temperature_title">Максимальная температура</string>
    <string name="increasing_the_max_temperature_summary">Повышение максимальной температуры относительно установленной</string>
    <string name="select_vibration_type">Выберите тип вибрации</string>
    <string name="button_default_settings">Настройки по умолчанию</string>
    <string name="temperature_notification_title">Умный Обогрев</string>
    <string name="temperature_notification_text">Температура: %1d°C</string>
    <string name="heater_started">Обогреватель запущен</string>
    <string name="heater_stopped">Обогреватель остановлен</string>
    <string name="toolbar_main_activity">Главная</string>
    <string name="toolbar_settings">Настройки</string>
    <string name="toolbar_user_profile">Профиль</string>
    <string name="normal_vibration">Обычная вибрация</string>
    <string name="haptic_feedback">Тактильная отдача</string>
</resources>