<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@drawable/scrollbar_style"
    tools:context=".WorkParameters">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutWave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/layoutSecondWave"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/second_wave_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1.35f"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <RelativeLayout
                android:id="@+id/layoutFirstWave"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/wave_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1.6f"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

            </RelativeLayout>

            <ImageButton
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/button_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/textWorkParameters"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="15dp"
                android:gravity="center_vertical|end"
                android:maxLines="1"
                android:text="@string/text_work_parameters"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="0.5sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@id/layoutFirstWave"
                app:layout_constraintDimensionRatio="5.0f"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonBack"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutWiFiNetwork"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="-38dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:hint="@string/input_layout_wifi_network"
            android:textColor="@color/primary_color"
            android:textColorHint="@color/primary_color"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/secondary_color"
            app:boxStrokeWidth="4dp"
            app:boxStrokeWidthFocused="4dp"
            app:placeholderTextColor="@color/primary_color"
            app:startIconTint="@color/primary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputWiFiNetwork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_wifi"
                android:drawablePadding="5dp"
                android:includeFontPadding="false"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/primary_color"
                android:textSize="20sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutWiFiPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:hint="@string/input_layout_wifi_password"
            android:textColor="@color/primary_color"
            android:textColorHint="@color/primary_color"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/secondary_color"
            app:boxStrokeWidth="4dp"
            app:boxStrokeWidthFocused="4dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/primary_color"
            app:passwordToggleTint="@color/primary_color"
            app:placeholderTextColor="@color/primary_color"
            app:startIconTint="@color/primary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputWiFiPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/primary_color"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutTimezone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:hint="@string/input_layout_timezone"
            android:textColor="@color/primary_color"
            android:textColorHint="@color/primary_color"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/secondary_color"
            app:boxStrokeWidth="4dp"
            app:boxStrokeWidthFocused="4dp"
            app:placeholderTextColor="@color/primary_color"
            app:startIconTint="@color/primary_color"
            app:suffixText="UTC"
            app:suffixTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:suffixTextColor="@color/secondary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTimezone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_timezone"
                android:drawablePadding="5dp"
                android:includeFontPadding="false"
                android:inputType="numberSigned"
                android:singleLine="true"
                android:textColor="@color/primary_color"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutTemperatureInterval"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:hint="@string/input_layout_temperature_interval"
            android:textColor="@color/primary_color"
            android:textColorHint="@color/primary_color"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/secondary_color"
            app:boxStrokeWidth="4dp"
            app:boxStrokeWidthFocused="4dp"
            app:placeholderTextColor="@color/primary_color"
            app:startIconTint="@color/primary_color"
            app:suffixText="мин"
            app:suffixTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:suffixTextColor="@color/secondary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTemperatureInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_thermometer"
                android:includeFontPadding="false"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/primary_color"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSendWorkParameters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background_style"
            android:maxLines="1"
            android:text="@string/button_send_work_parameters"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="0.5sp"
            app:autoSizeTextType="uniform"
            app:backgroundTint="#FFFFFF"
            app:backgroundTintMode="multiply"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</ScrollView>